# person-accounts-uploader-colab

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  project_requirements.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  validation_results_recreation_colab.ipynb  validation_results_recreation_local.ipynb
.github/workflows/: ci.yml  release.yml
config/: balance_rules.json  contract_mapper.json  timezone_mapper.json
data/calabrio/: config_data.json
data/workday/people/: Workday to Calabrio_Employee Data 2025-04-21 18_03 BST.xlsx
data/workday/person_accounts/: Workday to Calabrio_Time Off Balance Data 2025-04-21 19_01 BST.xlsx
data/workday/used_entries/: Workday to Calabrio_Booked Time Offs 2025-03-03 18_01 GMT (1).xlsx
notebooks_modules/: __init__.py  validation_api.py  validation_calculator.py  validation_callbacks.py  validation_config.py  validation_data_loader.py  validation_layout.py  validation_preprocessing.py  validation_table_creator.py  validation_utils.py
notebooks_modules/calabrio_py/: __init__.py  calabrio_api.py  manager.py  setup.py
notebooks_modules/calabrio_py/calabrio_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/core/: calculator.py  data_loader.py  preprocessor.py
src/utils/: config.py  exceptions.py  mappers.py  types.py
tests/: conftest.py
tests/unit/: test_config.py  test_data_loader.py
